# sharepoint-killer

./: CMakeLists.txt  README.md
resources/: resources.rc
src/: colors.cpp  colors.hpp  logs.hpp  main.cpp  processes.hpp  resource.hpp  ui.cpp  ui.hpp
